ugh no toc i guess

--- a/content/blog/2020-07-26-how-this-blog-was-made.Rmd
+++ b/content/blog/2020-07-26-how-this-blog-was-made.Rmd
@@ -3,8 +3,7 @@ title: "How This Blog Was Made"
 description: "A brief explanation of this blog"
 date: 2020-07-26T19:36:16-07:00
 keywords: ["r4fun"]
-draft: true
-toc: true
+draft: false
 ---
 
 ## Introduction
